--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 # MONGO_URI = mongodb+srv://nvhoan11092003:Hoan1109@cluster0.yvldvoj.mongodb.net/
-#  MONGO_URI = 'mongodb+srv://nvhoan11092003:Hoan1109@cluster0.yvldvoj.mongodb.net/'
-MONGO_URI = 'mongodb://127.0.0.1:27017/final'
+ MONGO_URI = 'mongodb+srv://nvhoan11092003:Hoan1109@cluster0.yvldvoj.mongodb.net/'
+# MONGO_URI = 'mongodb://127.0.0.1:27017/final'
 MAIL = thanhnvph26404@gmail.com
 PASS = ricjggvzlskbtsxl
 APP_URL = http://localhost:5173
